generic slides, added WG3

--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <!-- THIS IS WHERE THE CONTENT GOES! -->
 <!-- Any section element inside of this container is displayed as a slide -->
 
-<img height="120" data-src="img/basics/distantreading_rgb_tuerkis-blau.jpg"></img>
-<br/>
-###Distant Reading for European Literary History<br/>A COST Action
+<img height="90" data-src="img/basics/distantreading_rgb_tuerkis-blau.jpg"></img>
 <br/>
 <hr/>
-<br/><small>Christof Schöch (Trier, Germany)<br/>DARIAH-EU Annual Event, Paris, May 2018<br/>Text and Data Analysis Working Group</small>
 <br/>
+##Distant Reading for European Literary History. A COST Action
 <br/>
 <hr/>
-<img height="100" data-src="img/basics/cost-and-eu.png"></img>
+http://www.distant-reading.net
+<br/>CA16204
+<br/>
+<hr/>
+<a href="http://www.cost.eu"><img height="100" data-src="img/basics/cost-and-eu.png"></img></a>
 
 
 
@@ -53,10 +55,11 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 # Overview
 <br/>
 1. [What are COST Actions?](#/2)
-2. [What is "Distant-Reading" about?](#/3)
+2. [What is DISTANT READING about?](#/3)
 3. [Text Collection Building](#/4)
 4. [Methods and Tools](#/5)
-5. [Conclusions](#/6)
+5. [Literary History and Theory](#/6)
+6. [Conclusions](#/7)
 
 
 ---
@@ -103,9 +106,6 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 * Spread and share competencies in the three areas above among these groups <!-- .element: class="fragment" data-fragment-index="2" -->
 * Support relevant collaborative grant proposals on the national and European levels <!-- .element: class="fragment" data-fragment-index="3" -->
 
---
-## The network at the moment
-<img height="500" data-src="img/network.png"></img>
 
 
 ---
@@ -117,6 +117,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 * Comparable sets of novels for at least 10 European languages
 * Each set: 100 novels published between 1850 and 1920
 * Extensions (chronologically or simply additional texts)
+<br/><br/>
+* WG lead: Carolin Odebrecht <!-- .element: class="fragment" data-fragment-index="4" -->
+* Co-leads: Borja Navarro Colorado, Lou Burnard <!-- .element: class="fragment" data-fragment-index="4" -->
 
 --
 ## Collection building: text selection
@@ -170,21 +173,34 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <img height="450" data-src="img/direct-speech-both.png"></img>
 
 
+
 ---
-# To conclude
+# Literary History and Theory
+
+--
+## Objectives
 <br/>
-* Questions  <!-- .element: class="fragment" data-fragment-index="1" -->
-    * "Distant Reading" and DARIAH? 
-    * Specifically, TDA Working Group
-    * Other relevant activities or groups?<br/><br/>
-* To learn more <!-- .element: class="fragment" data-fragment-index="2" -->
+* Think through consequences for literary history and theory <!-- .element: class="fragment" data-fragment-index="1" -->
+* Key concepts: style, genre, authorship, periodization, canonization, intertextuality, etc. <!-- .element: class="fragment" data-fragment-index="2" -->
+<br/><br/>
+* WG lead: Antonija Primorac <!-- .element: class="fragment" data-fragment-index="3" -->
+* Co-leads: Rosario Arias, Corina Moldovan <!-- .element: class="fragment" data-fragment-index="3" -->
+
+
+
+---
+# To learn more
+<br/>
+* To learn more
+    * http://distant-reading.net/
     * https://github.com/distantreading
     * http://www.cost.eu/COST_Actions/ca/CA16204
-    * http://distant-reading.net/ (work in progress)
     * https://twitter.com/DistantReading
+* These slides: 
+    * http://distantreading.github.io/slides-en 
 
 
----
+--
 <br/>
 <br/>
 <br/>
