--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <br/>
 <br/>
 <hr/>
-<img height="70" data-src="img/distant-reading_logo.png">
-<br/><img height="70" data-src="img/cost-association_logo.png">
+<img height="70" data-src="img/distant-reading_logo.png"></img>
+<br/><img height="70" data-src="img/cost-association_logo.png"></img>
 
 ---
 ## **Agenda overview**
@@ -181,6 +181,9 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 * May 2019 to April 2020
 * Phase of further development in all WGs
 * A large Training School (WGs 1, 2, 3)
+
+--
+<a href="img/gantt-2019.png"><img heigth="600" data-src="img/gantt-2019.png"></img></a>
 
 --
 ## GP Goals
