--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- CUSTOMIZE THIS! -->
-<title>Distant Reading</title>
+<title>MC, Lisbon 2019</title>
 <meta name="author" content="Christof Schöch">
 <!-- END -->
 <meta name="description" content="Slides">
@@ -95,10 +95,18 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 
 
 ---
-## **4. Approval of minutes**
+## **4. MC Approvals**
 <small>[**^**](#/1)</small>
 
+--
+## Minutes of the Prague Meeting
+<small>[**^**](#/1)</small>
+* See: [File: Minutes](https://www.dropbox.com/s/hkfhnsl03re7g68/CA16204_minutes_MC-Prague-2018-02.pdf?dl=0)
 
+--
+## e-Vote on Budget Amendment GP2
+<small>[**^**](#/1)</small>
+* See: [File: Annex](https://www.dropbox.com/s/4qt5ns66rcdx6gh/ANNEX-A-R1_AGA-CA16204-2.pdf?dl=0)
 
 ---
 ## **5. Updates from the Core Group**
@@ -185,16 +193,31 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 --
 <a href="img/gantt-2019.png"><img heigth="600" data-src="img/gantt-2019.png"></img></a>
 
+
+--
+## Reminder: Action Goals
+* Research Coordination <!-- .element: class="fragment" data-fragment-index="1" -->
+    * To coordinate the creation of a multilingual European Literary Text Collection (ELTeC) in three iterations.
+    * To use the ELTeC to establish best practices and develop innovative methods of Distant Reading for the multiple European literary traditions.
+    * To engage in an investigation into the theoretical, methodological and practical consequences of Distant Reading approaches for literary history and literary theory.
+* Capacity Building <!-- .element: class="fragment" data-fragment-index="2" -->
+    * To foster the acquisition of state-of-the-art methods of Distant Reading, including competencies relating to data curation, standards, best practices and methods of Distant Reading analysis.
+    * To encourage and support the submission of competitive grant proposals both at the national and European levels.
+    * To help address the current gender imbalance among practitioners of Distant Reading research.
+
 --
 ## GP Goals
 <small>[**^**](#/1)</small>
-* to be discussed
+* Expand ELTec: more and more complete collections
+* Enable and showcase research across collections
+* Reinforce the European perspective on Literary History
+* Involve more people, with special regard to gender balance
 
 --
 ## Events in GP3
 <small>[**^**](#/1)</small>
 * Joint WG 1 + 2 Meeting:<br/>June/July 2019
-* Joint TS (WG 1,2,3) + WG3 Meeting:<br/>Budapest, Sept. 2019 
+* Joint TS (WG 1,2,3) + WG3 Meeting:<br/>Budapest, Sept. 2019<br/>with DH Budapest "Distant Reading" conference 
 * Joint CG + MC + MG Meeting:<br/>Málaga, Feb. 2020
 
 --
@@ -227,6 +250,13 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 ---
 ## **8. Any other business**
 <small>[**^**](#/1)</small>
+
+--
+## Mailing Lists
+<small>[**^**](#/1)</small>
+* Do we want them to be open for sending around annoucements? 
+    * My take: WG lists yes, if relevant to WG; 
+    * MC list no, reserve for MC business that requires action.
 
 --
 ## Practical things
