added stsm vote

--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 * Will there be more STSMs in GP2?
 
 --
+## Vote on STSM criteria
+<small>[**^**](#/1)</small>
+* Additional criteron for the STSM selection criteria: 
+>"Rank 4: Where all the above criteria are satisfied, applicants who would be first-time recipients of an STSM grant from our Action are priorised over applicants who have received an STSM grant from our Action before." 
+* (Rank 4 will become Rank 5)
+
+--
 ## Action monitoring
 <small>[**^**](#/1)</small>
 * "First Progress Report" (Nov. 2018)
