added stsm vote

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 1. [Welcome to participants](#/2)
 2. [Verification of the quorum](#/3)
 3. [Adoption of the agenda](#/4)
-4. [Approval of minutes](#/5)
+4. [MC Approvals](#/5)
 5. [Updates from the Core Group](#/6)
 6. [Reports from the working groups](#/7)
 7. [Action Planning for GP3](#/8)
@@ -125,7 +125,7 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
     * Australia (Newcastle University)
 
 --
-## STSMs
+## Current Status of STSMs
 <small>[**^**](#/1)</small>
 * STSMs conducted so far
 * STSMs already approved
@@ -138,13 +138,6 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 >"Rank 4: Where all the above criteria are satisfied, applicants who would be first-time recipients of an STSM grant from our Action are priorised over applicants who have received an STSM grant from our Action before." 
 * (Rank 4 will become Rank 5)
 
---
-## Action monitoring
-<small>[**^**](#/1)</small>
-* "First Progress Report" (Nov. 2018)
-* Regarding gender balance, ECIs and ITCs
-* Very significant progress since initial SC Recommendations
-* Second report (month 24): focused on scholary work
 
 --
 ## Action budget status
@@ -152,6 +145,14 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 * GP2: Amendment and current situation
 * MC Decision: remaining funds
 * GP3: 144k have been approved
+
+--
+## Action monitoring
+<small>[**^**](#/1)</small>
+* "First Progress Report" (Nov. 2018)
+* Regarding gender balance, ECIs and ITCs
+* Very significant progress since initial SC Recommendations
+* Second report (month 24): focused on scholary work
 
 
 
@@ -168,7 +169,7 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 --
 ## WG2: Methods and Tools
 <small>[**^**](#/1)</small>
-* ELTeC: annotations
+* ELTeC: annotation project / paper
 * Galway Training School
 
 --
@@ -180,7 +181,7 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 --
 ## WG4: Dissemination
 <small>[**^**](#/1)</small>
-* Development of the website
+* New developments on the website
 * The 2018 Poster Tour
 * ...
 
@@ -218,7 +219,7 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 * Expand ELTec: more and more complete collections
 * Enable and showcase research across collections
 * Reinforce the European perspective on Literary History
-* Involve more people, with special regard to gender balance
+* Improve visibility and communication beyond the Action participants
 
 --
 ## Events in GP3
