added stsm vote

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 --
 ## Vote on STSM criteria
 <small>[**^**](#/1)</small>
-* Additional criteron for the STSM selection criteria: 
->"Rank 4: Where all the above criteria are satisfied, applicants who would be first-time recipients of an STSM grant from our Action are priorised over applicants who have received an STSM grant from our Action before." 
+* Additional criterion for the STSM selection criteria: 
+>"Rank 4: Where all the above criteria are satisfied, applicants who would be first-time recipients of an STSM grant from our Action are prioritised over applicants who have received an STSM grant from our Action before." 
 * (Rank 4 will become Rank 5)
 
 
@@ -216,10 +216,10 @@ See: https://www.distant-reading.net/events/lisbon-meeting-2019/
 --
 ## GP Goals
 <small>[**^**](#/1)</small>
-* Expand ELTec: more and more complete collections
-* Enable and showcase research across collections
-* Reinforce the European perspective on Literary History
-* Improve visibility and communication beyond the Action participants
+* Expand ELTec: more and more complete collections (focus: WG1)
+* Enable and showcase research across collections (focus: WG2)
+* Reinforce the European perspective on Literary History (focus: WG3)
+* Improve visibility and communication beyond the Action participants (focus: WG4)
 
 --
 ## Events in GP3
