--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- CUSTOMIZE THIS! -->
-<title>DISTANT READING - CA16204</title>
+<title>CA16204</title>
 <meta name="author" content="Christof Schöch">
 <!-- END -->
 <meta name="description" content="Slides">
@@ -36,15 +36,14 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <!-- THIS IS WHERE THE CONTENT GOES! -->
 <!-- Any section element inside of this container is displayed as a slide -->
 
-<img height="90" data-src="img/basics/distantreading_rgb_tuerkis-blau.jpg"></img>
-<br/>
-<hr/>
-<br/>
 ##Distant Reading for European Literary History. A COST Action
-<br/>
+<img height="60" data-src="img/basics/distantreading_rgb_tuerkis-blau.jpg"></img>
 <hr/>
-http://www.distant-reading.net
-<br/>CA16204
+<br/>Christof Schöch (Trier, Germany)
+<br/>Vilnius Lectures, Sept. 2020
+<hr/>
+<br/>website: http://www.distant-reading.net
+<br/>slides: https://dh-trier.github.io/talks
 <br/>
 <hr/>
 <a href="http://www.cost.eu"><img height="100" data-src="img/basics/cost-and-eu.png"></img></a>
@@ -53,7 +52,6 @@ http://www.distant-reading.net
 
 ---
 # Overview
-<br/>
 1. [What are COST Actions?](#/2)
 2. [What is DISTANT READING about?](#/3)
 3. [Text Collection Building](#/4)
@@ -67,14 +65,21 @@ http://www.distant-reading.net
 
 --
 ## Networking Grants
-<br/>
 * Support network and capacity building around specific research topics <!-- .element: class="fragment" data-fragment-index="1" -->
 * Networks of European countries and international partners <!-- .element: class="fragment" data-fragment-index="2" -->
 * Around 300 Actions are running in parallel (very few of them in the Humanities) <!-- .element: class="fragment" data-fragment-index="3" -->
 
 --
+## Some Actions relevant to DH
+* [Interedition](http://www.interedition.eu/), 2008-2012
+* [European Network of e-Lexicography](https://www.elexicography.eu/), 2013-2017 
+* [Reassembling the Republic of Letters](http://www.republicofletters.net/), 2015-2018
+* [NEP4DISSENT - Cultures of Dissent](https://nep4dissent.eu/), 2017-2021
+* [Nexus Linguarum](https://nexuslinguarum.eu/), 2019-2023
+
+
+--
 ## Some key features
-<br/>
 * Action duration is usually 4 years <!-- .element: class="fragment" data-fragment-index="1" -->
 * Structured into working groups <!-- .element: class="fragment" data-fragment-index="2" -->
 * No funding for staff, only for networking activities <!-- .element: class="fragment" data-fragment-index="3" -->
@@ -83,29 +88,31 @@ http://www.distant-reading.net
 
 --
 ## COST networking activities
-<br/>
 * Working Group Meetings <!-- .element: class="fragment" data-fragment-index="1" -->
 * Training Schools <!-- .element: class="fragment" data-fragment-index="2" -->
 * Short Term Scientific Missions <!-- .element: class="fragment" data-fragment-index="3" -->
 * Conference Grants <!-- .element: class="fragment" data-fragment-index="4" -->
 
+
 ---
-# 2. What is "Distant Reading" about?
+# 2. What is *Distant Reading for European Literary History* about?
 
 --
 ## Research objectives
-<br/>
 * Resources: Build a multilingual reference collection of European novels ("ELTeC") <!-- .element: class="fragment" data-fragment-index="1" -->
-* Methods: Explore, evaluate, adapt and share computational methods of text analysis <!-- .element: class="fragment" data-fragment-index="2" -->
+* Methods: Explore, evaluate, adapt and share computational methods of text analysis for ELTeC <!-- .element: class="fragment" data-fragment-index="2" -->
 * Theory: Think through consequences of digital data and methods for literary history and theory  <!-- .element: class="fragment" data-fragment-index="3" -->
 
 --
 ## Networking objectives
-<br/>
 * Bring together corpus linguists, computational linguists, digital literary scholars, literary historians and theorists <!-- .element: class="fragment" data-fragment-index="1" -->
 * Spread and share competencies in the three areas above among these groups <!-- .element: class="fragment" data-fragment-index="2" -->
 * Support relevant collaborative grant proposals on the national and European levels <!-- .element: class="fragment" data-fragment-index="3" -->
 
+--
+## Current Network
+* 32 countries are involved 
+* more than 200 scholars are participating
 
 
 ---
@@ -113,17 +120,15 @@ http://www.distant-reading.net
 
 --
 ## European Literary Text Collection (ELTeC)
-<br/>
 * Comparable sets of novels for at least 10 European languages
 * Each set: 100 novels published between 1850 and 1920
 * Extensions (chronologically or simply additional texts)
-<br/><br/>
-* WG lead: Carolin Odebrecht <!-- .element: class="fragment" data-fragment-index="4" -->
-* Co-leads: Borja Navarro Colorado, Lou Burnard <!-- .element: class="fragment" data-fragment-index="4" -->
+* WG leads: Carolin Odebrecht (DE), Lou Burnard (UK), Borja Navarro Colorado (SP), Martina Scholger (AT)
+* Currently: about 1050 novels published
+* More information: https://distantreading.github.io/ELTeC/
 
 --
 ## Collection building: text selection
-<br/>
 * (1) Eligibility: In order to be included, a text must...
     * have been first published as a book between 1850 and 1919 <!-- .element: class="fragment" data-fragment-index="1" -->
     * have been published in a European country within a decade from their first publication <!-- .element: class="fragment" data-fragment-index="2" -->
@@ -132,21 +137,30 @@ http://www.distant-reading.net
 
 --
 ## Collection building: text selection
-<br/>
 * (2) Composition: Among the novels in each language subcollection...
-    * there should be a roughly equal number for each decade  <!-- .element: class="fragment" data-fragment-index="1" -->
-    * at least 10% and a maximum of 30% have been written by female authors  <!-- .element: class="fragment" data-fragment-index="2" -->
-    * at least 10 and at most 15 authors are represented with three novels  <!-- .element: class="fragment" data-fragment-index="3" -->
-    * at least 30% are canonized novels, at least 30% non-canonized novels <!-- .element: class="fragment" data-fragment-index="4" -->
-    * at least 20% are short novels (10-50k word tokens), at least 20% are long novels (>200k word tokens) <!-- .element: class="fragment" data-fragment-index="5" -->
+    * at least 10% (ideally more) have been written by female authors  <!-- .element: class="fragment" data-fragment-index="1" -->
+    * at least 30% are rarely reprinted novels <!-- .element: class="fragment" data-fragment-index="2" -->
+    * at least 20% are short (10-50k words), at least 20% are long (>100k words) novels <!-- .element: class="fragment" data-fragment-index="3" -->
+    * 9-11 authors are represented with three novels <!-- .element: class="fragment" data-fragment-index="4" -->
+    * the novels should be spread out evenly across the entire period <!-- .element: class="fragment" data-fragment-index="5" -->
+
 
 --
 ## Collection building: Text encoding
-<br/>
 * All texts are encoded in XML-TEI (Text Encoding Initiative) <!-- .element: class="fragment" data-fragment-index="1" -->
 * There are three levels of encoding, with increasingly detailed markup <!-- .element: class="fragment" data-fragment-index="2" -->
-* E.g.: verse lines are marked as "paragraph" in level 0, as "line" in level 1 <!-- .element: class="fragment" data-fragment-index="3" -->
+    * level 0: very simple / minimal markup
+    * level 1: richer, more 'semantic' markup
+    * level 2: text with linguistic annotation
 
+--
+## Some challenges 
+* Different states of digitization in various formats (e.g.: French vs. Romanian) <!-- .element: class="fragment" data-fragment-index="1" -->
+* Most metadata relevant to composition is not included in catalogs; e.g. novel type, author gender <!-- .element: class="fragment" data-fragment-index="2" -->
+* Varying writing systems used (e.g.: Romanian 'transition alphabet') <!-- .element: class="fragment" data-fragment-index="3" -->
+* Varying traditions of novel length (e.g.: few Slovenian 'long' novels) <!-- .element: class="fragment" data-fragment-index="4" -->
+* corpus composition criteria as a double-edged sword (under-represented categories in under-represented literary traditions) <!-- .element: class="fragment" data-fragment-index="5" -->
+* need for stability vs. adjustment of composition and encoding guidelines <!-- .element: class="fragment" data-fragment-index="6" -->
 
 
 ---
@@ -159,9 +173,7 @@ http://www.distant-reading.net
 * Adapt Distant Reading methods to multiple European languages <!-- .element: class="fragment" data-fragment-index="1" -->
 * Develop cross-linguistic use of Distant Reading methods <!-- .element: class="fragment" data-fragment-index="2" -->
 * Spread Distant Reading competencies across Europe (ECI / ITC) <!-- .element: class="fragment" data-fragment-index="3" -->
-<br/><br/>
-* WG lead: Mike Kestemont <!-- .element: class="fragment" data-fragment-index="4" -->
-* Co-leads: Fotis Jannidis, Yaakov HaCohen-Kerner <!-- .element: class="fragment" data-fragment-index="4" -->
+* WG leads: Joanna Byszuk (PL), George Mikros (GR), Fotis Jannidis (DE), Yaakov HaCohen-Kerner (ISR) <!-- .element: class="fragment" data-fragment-index="4" -->
 
 --
 ## Example for Adaptation: Stylometry
